fixed layout on mobile

--- a/src/components/Crypto/Crypto.css
+++ b/src/components/Crypto/Crypto.css
@@ -1,33 +1,26 @@
 .item-container{
-    /* min-height: 200px;  */
-    /* max-height: 200px;  */
-    /* max-width: 200px; */
+
     display: flex;
     width: 100%;
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* flex-direction: column; */
+
 }
 
 .item-desc{
-    /* min-height: 100px;  */
-    /* max-height: 100px;  */
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
+
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: .5rem;
+    /* padding: 0rem 1rem 0rem 0rem; */
 }
 span{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    max-width: 100px;
-    min-width: 100px;
-    height: 80px;
+    /* min-width: 90px; */
+    /* max-width: 90px; */
+  
 }
 p{
     width: 100%;
@@ -36,4 +29,26 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
+    /* margin: 0rem 1rem; */
+
+}
+
+
+
+
+.logo img{
+    height: 50px;
+    width: 50px;
+}
+
+@media only screen and (max-width: 600px){
+
+    .logo img{
+        width: 20px;
+        height: 20px;
+    }
+
+    span{
+        
+    }
 }
